# axum-crud

./: Cargo.toml  README.md
crud-macros/: Cargo.toml
crud-macros/src/: lib.rs
src/: check_env.rs  connect_db.rs  lib.rs
src/api/: mod.rs  queries.rs  startapi.rs
src/handlers/: mod.rs  root.rs
src/models/: city.rs  mod.rs
src/routes/: api_routes.rs  mod.rs
src/tests/: mod.rs  queries.rs
src/tests/utils/: common.rs
