[package]
name = "axum-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "axum_crud_lib"
path = "src/lib.rs"

[[bin]]
name = "axum_crud_bin"
path = "bin/bin.rs" 

[dependencies]
axum-server = { version = "0.5", features = ["tls-openssl"] }
axum = { version = "0.6", features = ["http2", "macros"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
deadpool-postgres = { version = "0.9" }
postgres-openssl = { version = "0.5" }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
dotenvy = { version = "0.15.0" }
openssl = { version = "0.10.55" }
postgres-from-row = { version = "0.5.2" }
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3"
crud-macros = { path = "crud-macros" }
async-trait = { version = "0.1.72" }
 phf = {version =  "0.11.2", features = ["macros"]}
