[package]
name = "crud-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
axum = { version = "0.6", features = ["macros"] }
async-trait = { version = "0.1.72" }
serde_json = { version = "1.0.104" }